--- a/p8105_finalproject_shiny.Rmd
+++ b/p8105_finalproject_shiny.Rmd
@@ -34,6 +34,12 @@ hospital_data <- read_csv(file = "./data/Hospital_General_Information.csv", col_
   filter(!is.na(coordinates)) %>%
 separate(coordinates, into = c("latitude", "longitude"), sep = ",") %>%
   mutate(latitude = as.numeric(latitude), longitude = as.numeric(longitude))
+
+
+hospital_data_regions <- read_csv(file = "./data/Hospital_General_Information.csv", col_names = TRUE) %>% 
+  clean_names() %>% 
+  mutate(region = ifelse(grepl("ME|NH|VT|MA|RI|CT", state), "New England", ifelse(grepl("NY|PA|NJ", state), "Middle Atlantic", ifelse(grepl("WI|MI|IL|IN|OH", state), "East North Central", ifelse(grepl("ND|SD|NE|KS|MN|IA|MO", state), "West North Central", ifelse(grepl("DE|MD|DC|VA|WV|NC|SC|GA|FL", state), "South Atlantic", ifelse(grepl("KY|TN|MS|AL", state), "East South Central", ifelse(grepl("OK|TX|AR|LA", state), "West South Central", ifelse(grepl("ID|MT|WY|NV|UT|CO|AZ|NM", state), "Mountain", ifelse(grepl("AK|WA|OR|CA|HI", state), "Pacific", "U.S. Territories")))))))))) 
+
 ```
 
 Column {.sidebar}
@@ -45,6 +51,12 @@ star_choice <- hospital_data %>%
 # selectInput widget
 shiny::selectInput("star_choice", label = h3("Select Star"),
             choices = star_choice, selected = "5")
+
+regions <- hospital_data_regions %>% 
+  distinct(region) %>% pull()
+# selectInput widget
+shiny::selectInput("region_choice", label = h3("Select Region"),
+            choices = regions, selected = "New England")
 ```
 
 
@@ -83,7 +95,16 @@ Row {.tabset .tabset-fade}
 ### Chart B
 
 ```{r}
-
+renderPlotly({ 
+  hospital_data_regions %>%
+  filter(hospital_overall_rating != "Not Available") %>%
+  filter(region == input$region_choice) %>%
+  mutate(hospital_overall_rating = as.numeric(hospital_overall_rating)) %>%
+  group_by(region, state, hospital_overall_rating) %>%
+  mutate(num_hospitals = n()) %>%
+  plot_ly(x = ~hospital_overall_rating, y = ~num_hospitals,color = ~state, type = "bar") %>% 
+  layout(title = "Number of hospitals per hospital rating, by state", margin = list(b = 75)) 
+})
 ```
 
 ### Chart C
